--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,4 +37,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run:
+        gh release create ${{ github.event.inputs.Version }} --target main 
         gh release upload ${{ github.event.inputs.Version }} JAMCAT-MACH-${{ github.event.inputs.Version }}.exe
